src/test/ui/parser/issue-32501.stderr
error: `mut` must be attached to each individual binding
  --> $DIR/issue-32501.rs:7:9
   |
LL |     let mut _ = 0;
   |         ^^^^^ help: add `mut` to each binding: `_`

error: aborting due to previous error

